[package]
name = "lite-llm-runtime"
version = "0.1.0"
edition = "2021"
description = "Lite LLM runtime skeleton for deterministic core execution."
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.70"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
